--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-scripts start",
