--- a/back/.env
+++ b/back/.env
@@ -1,3 +1,2 @@
 SECRET_KEY=16cf1397c5ef4ea884fe17620ad704af
-SQLALCHEMY_DATABASE_URI=postgresql://postgres:root@31.184.254.156:5434/tenderhack_dev
-SQLALCHEMY_DATABASE_URI_PSY=postgresql+psycopg2://postgres:root@31.184.254.156:5434/tenderhack_dev
+SQLALCHEMY_DATABASE_URI_PSY=postgresql+psycopg2://postgres:root@31.184.254.156:5434/postgres
