--- a/front/package.json
+++ b/front/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@mui/system": "^5.14.20",
+    "@mui/x-date-pickers": "^6.18.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
