--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.21"
