--- a/hack_tenderhack-master/.gitignore
+++ b/hack_tenderhack-master/.gitignore
@@ -2,6 +2,10 @@
 
 # dependencies
 /node_modules
+node_modules/
+node_modules
+**/node_modules
+**/node_modules/
 /front/node_modules
 /.pnp
 .pnp.js
