--- a/hack_tenderhack-master/.gitignore
+++ b/hack_tenderhack-master/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+*node_modules/*
 /node_modules
 node_modules/
 node_modules
@@ -32,3 +33,5 @@ yarn-debug.log*
 yarn-error.log*
 
 venv
+
+hack_tenderhack-master/demo-app/frontend/node_modules
